--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ openssl=1.1.1m=h7f8727e_0
 packaging=21.3=pyhd8ed1ab_0
 path=16.4.0=py38h578d9bd_0
 path.py=12.5.0=0
-pillow=8.0.0=py38h9a89aac_0
+pillow
 pip=20.2.4=py38_0
 pluggy=1.0.0=py38h578d9bd_2
 py=1.11.0=pyh6c4a22f_0
