--- a/requirements.txt
+++ b/requirements.txt
@@ -43,10 +43,10 @@ path.py=12.5.0=0
 pillow
 pip=20.2.4=py38_0
 pluggy=1.0.0=py38h578d9bd_2
-py=1.11.0=pyh6c4a22f_0
+py
 pyparsing=3.0.7=pyhd8ed1ab_0
-pytest=7.1.0=py38h578d9bd_0
-pytest-shutil=1.7.0=pyhd8ed1ab_1
+pytest
+pytest-shutil
 python=3.8.5=h7579374_1
 python-dateutil=2.8.2=pyhd8ed1ab_0
 python_abi=3.8=2_cp38
