--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ python=3.8.5=h7579374_1
 python-dateutil=2.8.2=pyhd8ed1ab_0
 python_abi=3.8=2_cp38
 readline=8.0=h7b6447c_0
-setuptools=50.3.0=py38hb0f4dca_1
+setuptools
 six=1.16.0=pyh6c4a22f_0
 sqlite=3.33.0=h62c20be_0
 termcolor=1.1.0=py_2
